# s3-display-amoled-touch-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  renovate.json
.cargo/: config.toml
.github/workflows/: release.yml  rust_ci.yml
app/: Cargo.toml  build.rs
app/doc/: radar_sensor.avif
app/src/: controller.rs  display.rs  display_line_buffer.rs  draw_buffer.rs  hardware.rs  main.rs  pmu.rs  radar_task.rs  render_task.rs  slint_backend.rs
app/src/hardware/: display.rs  mod.rs  pmu.rs  radar.rs  touch.rs
app/ui/: app-window.slint  common.slint
drivers/: Cargo.toml  README.md
drivers/src/: bq25896.rs  cst816s.rs  cst816x.rs  ld2410.rs  lib.rs  rm67162.rs
drivers/src/bq25896/: asynch.rs  blocking.rs  mod.rs
drivers/src/cst816x/: asynch.rs  blocking.rs  mod.rs
drivers/src/ld2410/: asynch.rs  blocking.rs  mod.rs
scripts/: build.sh  flash.sh  install-hooks.sh
scripts/hooks/: pre-push
slint-generated/: Cargo.toml  build.rs
slint-generated/ui/: app-window.slint  common.slint
src/: bq25896.rs  cst816s.rs  display.rs  lib.rs  main.rs  rm67162.rs
src/driver/: cst816s.rs  mod.rs  rm67162.rs
ui/: app-window.slint
