[package]
name = "s3-display-amoled-touch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "defmt",
] }

esp-hal = { version = "0.22.0", features = ["esp32s3", "defmt", "octal-psram"] }
esp-alloc = { version = "0.5.0" }
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embassy-embedded-hal = { version = "0.2.0", default-features = false, features = [
    "defmt",
] }
esp-hal-embassy = { version = "0.5.0", features = [
    "esp32s3",
    "defmt",
    "integrated-timers",
] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-163840",
    "defmt",
] }
mipidsi = "0.8.0"
embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }
display-interface = { version = "0.5.0", features = ["defmt-03"] }
display-interface-spi = "0.5.0"
embassy-time = { version = "0.3.1", features = ["defmt"] }

embedded-hal-bus = { version = "0.2.0", features = ["defmt-03"] }
critical-section = "1.2.0"
libm = "0.2.11"
slint = { version = "1.9.1", default-features = false, features = [
    "libm",
    "unsafe-single-threaded",
    "compat-1-2",
    "renderer-software",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies]
slint-build = "1.9.1"
