[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-bootloader-esp-idf = "0.1.0"
esp-backtrace = { version = "0.17.0", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
drivers = { path = "../drivers", features = [] }
esp-hal = { version = "1.0.0-rc.0", features = [
    "esp32s3",
    "psram",
    "unstable",
    "log-04",
] }
esp-hal-embassy = { version = "0.8.1", features = ["esp32s3", "log-04"] }
esp-alloc = { version = "0.8.0" }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04"] }
embedded-graphics-core = { version = "0.4.0", features = [] }
embedded-hal-bus = { version = "0.3.0", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
libm = "0.2.15"
slint = { version = "1.12.1", default-features = false, features = [
    "libm",
    "unsafe-single-threaded",
    "compat-1-2",
    "renderer-software",
] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-12288"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-futures = { version = "0.1.1", features = [] }
embassy-sync = { version = "0.7.0", features = [] }
slint-generated = { path = "../slint-generated" }
static_cell = { version = "2.1.1", features = ["nightly"] }
log = "0.4.27"
