[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "=1.0.0-rc.1", features = [
    "esp32s3",
    "log-04",
    "unstable",
    "psram",
] }

esp-rtos = { version = "0.1.1", features = [
    "embassy",
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
log = "0.4.28"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
mipidsi = { git = "https://github.com/almindor/mipidsi.git", branch = "master" }
drivers = { path = "../drivers", features = ["log-04"] }
embedded-graphics-core = { version = "0.4.0", features = [] }
embedded-hal-bus = { version = "0.3.0", features = [] }
embedded-hal = { version = "1.0.0", features = [] }
libm = "0.2.15"
slint = { version = "1.13.1", default-features = false, features = [
    "libm",
    "unsafe-single-threaded",
    "compat-1-2",
    "renderer-software",
] }
embassy-futures = { version = "0.1.2", features = [] }
embassy-sync = { version = "0.7.2", features = [] }
slint-generated = { path = "../slint-generated" }
static_cell = { version = "2.1.1", features = ["nightly"] }
