[package]
name = "drivers"
version = "0.11.0"
edition = "2021"

[features]
default = []
defmt = ["dep:defmt", "embedded-io/defmt", "embedded-io-async/defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03"]
log-04 = ["dep:log"]

[dependencies]
embedded-io = { version = "0.7.1", features = ["alloc"] }
libm = "0.2.15"
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.28", optional = true }
embedded-hal = { version = "1.0.0" }
bitflags = "2.10.0"
num_enum = { version = "0.7.5", default-features = false }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.7.0"
