[package]
name = "drivers"
version = "0.12.0"
edition = "2021"

[features]
default = []
async = ["dep:embedded-hal-async", "dep:embedded-io-async"]
defmt = ["dep:defmt", "embedded-io/defmt", "embedded-hal/defmt-03", "embedded-hal-async?/defmt-03", "embedded-io-async?/defmt"]
log-04 = ["dep:log"]

[dependencies]
embedded-io = { version = "0.7.1", features = ["alloc"] }
libm = "0.2.15"
embedded-hal = { version = "1.0.0" }
bitflags = "2.10.0"
num_enum = { version = "0.7.5", default-features = false }
# Optional dependencies for async feature
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-io-async = { version = "0.7.0", optional = true }

# Optional dependencies for logging features
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4.28", optional = true }

